--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -2,6 +2,6 @@ name: Doc
 on: [push]
 jobs:
   doc:
-    runs-on: alpine-latest
+    runs-on: ubuntu-latest
     steps:
       - run: ls *.awk -1 > README.md
