--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -4,5 +4,6 @@ jobs:
   doc:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - shell: bash
         run: ls ./*.awk -1 > ./README.md
