--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -6,4 +6,15 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - shell: bash
-        run: ls ./*.awk -1 > ./README.md
+        run: |-
+          echo "# AWK practicing" > README.md
+          echo "" > README.md
+          ls ./*.awk -1 >> ./README.md
+      - name: Commit and push if changed
+        run: |-
+          git diff
+          git config --global user.email "actions@users.noreply.github.com"
+          git config --global user.name "README-bot"
+          git add -A
+          git commit -m "Updated content" || exit 0
+          git push
